# rustify-hackathon-2025

./: .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  PROJECT_STRUCTURE.md  README.md  build.sh  netlify.toml  package-lock.json  package.json  render.yaml  vercel.json
.github/workflows/: deploy.yml
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  index.css
client/src/components/: DataInput.tsx  FibonacciCalculator.tsx  MathDemo.tsx  ResultsDisplay.tsx
client/src/wasm/: .gitignore  index.ts  rust_core.d.ts  rust_core.ts
client/src/wasm/package/: .gitignore  package.json  rust_core.d.ts  rust_core.js  rust_core_bg.wasm  rust_core_bg.wasm.d.ts
client/src/worker/: dataWorker.ts  workerManager.ts
docs/rust-macos-env-fix/: MACOS_RUST_FIX.md  fix-rust-env.sh
rust-core/: Cargo.toml  build.sh  dev.sh
rust-core/src/: lib.rs  utils.rs
